# StarLabsTheme

./: .gitmodules  README.md  TODO.txt  assemble.sh  colors.list  colors.list.bak  merlin.sh  meson.build  meson_options.txt  setup  star.sh  test-install.sh  test.sh
Theme/: meson.build  meson_options.txt
Theme/src/: meson.build
backgrounds/: StarLabs.xml  master.xml  meson.build
extensions/: meson.build  org.gnome.shell.extensions.indicator.gschema.xml  org.gnome.shell.extensions.lockkeys.gschema.xml
extensions/indicator@starlabs.systems/: extension.js  lockkeys.pot  metadata.json  prefs.js
extensions/lockkeys@vaina.lt/: extension.js  prefs.js
gnome-shell/: 0x30  gnome-shell-theme.gresource  gnome-shell-theme.gresource.xml  gnome-shell.css  gnome-shell.scss  meson.build  test.sh
gnome-shell/Dark/: gnome-shell.scss  meson.build
gnome-shell/Light/: gnome-shell-theme.gresource.xml  gnome-shell.scss  meson.build
gnome-shell/Master/: gnome-shell-high-contrast.scss  meson.build
gnome-shell/Standard/: meson.build
gnome-shell/StarLabs/: gnome-shell.scss  meson.build
gnome-shell/StarLabs-Alternative/: gnome-shell.scss  meson.build
gnome-shell/StarLabs-Alternative-Light/: gnome-shell.scss  meson.build
gnome-shell/StarLabs-Green/: gnome-shell.scss  meson.build
gnome-shell/StarLabs-Green-Light/: meson.build
gnome-shell/StarLabs-Grey/: gnome-shell-theme.gresource.xml  gnome-shell.scss  meson.build
gnome-shell/StarLabs-Grey-Light/: meson.build
gnome-shell/StarLabs-Light/: .meson.build.swp  gnome-shell-theme.gresource.xml  gnome-shell.scss  meson.build
gnome-shell/StarLabs-Navy/: gnome-shell.scss  meson.build
gnome-shell/StarLabs-Navy-Light/: meson.build
gnome-shell/StarLabs-OLED/: gnome-shell.scss  meson.build
gnome-shell/StarLabs-OLED-Light/: meson.build
gnome-shell/StarLabs-Orange/: gnome-shell.scss  meson.build
gnome-shell/StarLabs-Orange-Light/: meson.build
gnome-shell/StarLabs-Pink/: gnome-shell.scss  meson.build
gnome-shell/StarLabs-Pink-Light/: meson.build
gnome-shell/StarLabs-Purple/: gnome-shell.scss  meson.build
gnome-shell/StarLabs-Purple-Light/: meson.build
gnome-shell/StarLabs-Red/: gnome-shell-theme.gresource.xml  gnome-shell.scss  meson.build
gnome-shell/StarLabs-Red-Light/: gnome-shell.scss  meson.build
gnome-shell/StarLabs-Sky/: gnome-shell.scss  meson.build
gnome-shell/StarLabs-Sky-Light/: meson.build
gnome-shell/StarLabs-Tribute/: gnome-shell.scss  meson.build
gnome-shell/StarLabs-Tribute-Light/: meson.build
gnome-shell/StarLabs-Turquoise/: gnome-shell.scss  meson.build
gnome-shell/StarLabs-Turquoise-Light/: meson.build
gnome-shell/StarLabs-Yellow/: gnome-shell.scss  meson.build
gnome-shell/StarLabs-Yellow-Light/: meson.build
gnome-shell/sass/: _functions.scss  _sections.scss  _starlabs.scss
gnome-shell/src/: gnome-shell.scss  meson.build
grub/: meson.build
gtk/: meson.build
gtk/Dark/: index.theme.in  meson.build
gtk/Flash/: meson.build
gtk/Frost/: meson.build
gtk/Light/: meson.build
gtk/Standard/: meson.build
gtk/StarLabs/: index.theme
gtk/StarLabs-Alternative/: index.theme
gtk/StarLabs-Alternative-Dark/: index.theme
gtk/StarLabs-Dark/: index.theme
gtk/StarLabs-Green/: index.theme
gtk/StarLabs-Green-Dark/: index.theme
gtk/StarLabs-Green-Light/: index.theme
gtk/StarLabs-Grey/: index.theme
gtk/StarLabs-Grey-Dark/: index.theme
gtk/StarLabs-Grey-Light/: index.theme
gtk/StarLabs-Light/: index.theme
gtk/StarLabs-Navy/: index.theme
gtk/StarLabs-Navy-Dark/: index.theme
gtk/StarLabs-Navy-Light/: index.theme
gtk/StarLabs-OLED/: index.theme
gtk/StarLabs-OLED-Dark/: index.theme
gtk/StarLabs-OLED-Light/: index.theme
gtk/StarLabs-Orange/: index.theme
gtk/StarLabs-Orange-Dark/: index.theme
gtk/StarLabs-Orange-Light/: index.theme
gtk/StarLabs-Pink/: index.theme
gtk/StarLabs-Pink-Dark/: index.theme
gtk/StarLabs-Pink-Light/: index.theme
gtk/StarLabs-Purple/: index.theme
gtk/StarLabs-Purple-Dark/: index.theme
gtk/StarLabs-Purple-Light/: index.theme
gtk/StarLabs-Red/: index.theme
gtk/StarLabs-Red-Dark/: index.theme
gtk/StarLabs-Red-Light/: index.theme
gtk/StarLabs-Sky/: index.theme
gtk/StarLabs-Sky-Dark/: index.theme
gtk/StarLabs-Sky-Light/: index.theme
gtk/StarLabs-Tribute/: index.theme
gtk/StarLabs-Tribute-Dark/: index.theme
gtk/StarLabs-Tribute-Light/: index.theme
gtk/StarLabs-Turquoise/: index.theme
gtk/StarLabs-Turquoise-Dark/: index.theme
gtk/StarLabs-Turquoise-Light/: index.theme
gtk/StarLabs-Yellow/: index.theme
gtk/StarLabs-Yellow-Dark/: index.theme
gtk/StarLabs-Yellow-Light/: index.theme
gtk/gtk-2.0/: gtkrc  main.rc
gtk/gtk-3.0/: gtk.gresource.xml.in  gtk.scss  meson.build
gtk/gtk-3.20/: gtk.css  test.sh
icons/: meson.build
icons/StarLabs-Alternative/: cursor.theme  index.theme
icons/StarLabs-Alternative-Circle/: index.theme
icons/StarLabs-Alternative-Squircle/: index.theme
icons/StarLabs-Circle/: index.theme  meson.build
icons/StarLabs-Dark/: meson.build
icons/StarLabs-Green/: cursor.theme  index.theme
icons/StarLabs-Green-Circle/: index.theme
icons/StarLabs-Green-Squircle/: index.theme
icons/StarLabs-Grey/: cursor.theme  index.theme
icons/StarLabs-Grey-Circle/: index.theme
icons/StarLabs-Grey-Squircle/: index.theme
icons/StarLabs-Light/: meson.build
icons/StarLabs-Navy/: cursor.theme  index.theme
icons/StarLabs-Navy-Circle/: index.theme
icons/StarLabs-Navy-Squircle/: index.theme
icons/StarLabs-OLED/: cursor.theme  index.theme
icons/StarLabs-OLED-Circle/: index.theme
icons/StarLabs-OLED-Squircle/: index.theme
icons/StarLabs-Orange/: cursor.theme  index.theme
icons/StarLabs-Orange-Circle/: index.theme
icons/StarLabs-Orange-Squircle/: index.theme
icons/StarLabs-Pink/: cursor.theme  index.theme
icons/StarLabs-Pink-Circle/: index.theme
icons/StarLabs-Pink-Squircle/: index.theme
plymouth/: Source.script  StarLabs-Firmware.plymouth  StarLabs.grub  StarLabs.plymouth  StarLabs.script  meson.build
src/: .meson.build.swp  index.theme  meson.build  meson.build.save
(+1825 files in other folders)
