project('StarLabs',
        version: '18.10.1',
        meson_version: '>= 0.45',
        license : ['GPL3', 'CC BY-SA 4.0'],
        default_options: ['prefix=/usr'])

subdir('grub')
subdir('plymouth')
subdir('extensions')
subdir('icons')
subdir('backgrounds')
subdir('gnome-shell')
subdir('gtk')
subdir('sounds')
subdir('font')
subdir('sessions')
