project('StarLabs',
        version: '0.1',
        meson_version: '>= 0.45',
        license : ['GPL3', 'CC BY-SA 4.0'],
        default_options: ['prefix=/usr']
)

subdir('backgrounds')
subdir('extensions')
subdir('font')
subdir('gnome-shell')
subdir('grub')
subdir('gtk')
subdir('icons')
subdir('plymouth')
subdir('sessions')
subdir('sounds')

