option(
  'theme_name',
  type: 'string',
  value: 'StarLabs',
  description: 'Set theme name',
)

option(
  'colors',
  type: 'array',
  choices: ['default', 'dark'],
  description: 'Choose color variant(s)',
)

option(
  'accents',
  type: 'array',
  choices: ['default', 'green', 'orange'],
  description: 'Choose accent color(s)',
)

option(
  'gnome_shell_version',
  type: 'string',
  description: 'Manually set gnome-shell version',
)

option(
  'icon_sizes',
  type: 'array',
  choices: ['24', '48', '96', '16', '32', '64', '128', '256', '512'],
  description: 'Choose icon size(s)',
)
