option(
  'theme_name',
  type: 'string',
  value: 'StarLabs',
  description: 'Set theme name',
)

option(
  'colors',
  type: 'array',
  choices: ['default', 'dark'],
  description: 'Choose color variant(s)',
)

option(
  'accents',
  type: 'array',
  choices: ['default', 'green', 'orange'],
# If you want to add a new color variant, add it here.
#
# For example:
# choices: ['red']
  description: 'Choose accent color(s)',
)

option(
  'gnome_shell_version',
  type: 'string',
# Focal: 3.36
# Impish: 40.5
  value: '3.36',
  description: 'Manually set gnome-shell version',
)

option(
  'sizes',
  type: 'array',
  choices: ['24', '48', '96', '16', '32', '64', '128', '256', '512'],
  description: 'Choose icon size(s)',
)
