backgrounds_dir = join_paths(get_option('datadir'), 'backgrounds')
install_dir =join_paths(backgrounds_dir, meson.project_name())
backgrounds_sources = [
'StarWallpaper0Blue.png',
]
install_data(backgrounds_sources,
install_dir: install_dir)
xml_dir = join_paths(get_option('datadir'), 'gnome-background-properties')
xml_sources = [
'StarLabs.xml',
]
install_data(xml_sources, install_dir: xml_dir)