backgrounds_dir = join_paths(get_option('datadir'), 'backgrounds')
install_dir =join_paths(backgrounds_dir, meson.project_name())
backgrounds_sources = [
'StarWallpaper0.png',
'StarWallpaper12.jpg',
'StarWallpaper11.jpg',
'StarWallpaper10.jpg',
'StarWallpaper9.jpg',
'StarWallpaper8.jpg',
'StarWallpaper7.jpg',
'StarWallpaper6.jpg',
'StarWallpaper5.jpg',
'StarWallpaper4.jpg',
'StarWallpaper3.jpg',
'StarWallpaper2.jpg',
'StarWallpaper1.jpg',
'StarWallpaper0Tribute.png',
'StarWallpaper0Blue.png',
]
install_data(backgrounds_sources,
install_dir: install_dir)
xml_dir = join_paths(get_option('datadir'), 'gnome-background-properties')
xml_sources = [
'StarLabs.xml',
]
install_data(xml_sources, install_dir: xml_dir)