sassc = find_program('sassc')
subdir('StarLabs')
subdir('StarLabs-Light')
subdir('StarLabs-Navy')
subdir('StarLabs-Navy-Light')
subdir('StarLabs-Grey')
subdir('StarLabs-Grey-Light')
subdir('StarLabs-Turquoise')
subdir('StarLabs-Turquoise-Light')
subdir('StarLabs-Yellow')
subdir('StarLabs-Yellow-Light')
subdir('StarLabs-Green')
subdir('StarLabs-Green-Light')
subdir('StarLabs-Purple')
subdir('StarLabs-Purple-Light')
subdir('StarLabs-Pink')
subdir('StarLabs-Pink-Light')
subdir('StarLabs-Orange')
subdir('StarLabs-Orange-Light')
subdir('StarLabs-Red')
subdir('StarLabs-Red-Light')
subdir('StarLabs-OLED')
subdir('StarLabs-OLED-Light')
subdir('StarLabs-Tribute')
subdir('StarLabs-Tribute-Light')
subdir('StarLabs-Sky')
subdir('StarLabs-Sky-Light')
