subdir('StarLabs')
subdir('StarLabs-Dark')
subdir('StarLabs-Navy')
subdir('StarLabs-Navy-Dark')
subdir('StarLabs-Grey')
subdir('StarLabs-Grey-Dark')
subdir('StarLabs-Turquoise')
subdir('StarLabs-Turquoise-Dark')
subdir('StarLabs-Yellow')
subdir('StarLabs-Yellow-Dark')
subdir('StarLabs-Green')
subdir('StarLabs-Green-Dark')
subdir('StarLabs-Purple')
subdir('StarLabs-Purple-Dark')
subdir('StarLabs-Pink')
subdir('StarLabs-Pink-Dark')
subdir('StarLabs-Orange')
subdir('StarLabs-Orange-Dark')
subdir('StarLabs-Red')
subdir('StarLabs-Red-Dark')
subdir('StarLabs-OLED')
subdir('StarLabs-OLED-Dark')
subdir('StarLabs-Tribute')
subdir('StarLabs-Tribute-Dark')
