subdir('StarLabs-Light')
subdir('StarLabs')
subdir('StarLabs-Dark')
subdir('StarLabs-Navy-Light')
subdir('StarLabs-Navy')
subdir('StarLabs-Navy-Dark')
subdir('StarLabs-Grey-Light')
subdir('StarLabs-Grey')
subdir('StarLabs-Grey-Dark')
subdir('StarLabs-Turquoise-Light')
subdir('StarLabs-Turquoise')
subdir('StarLabs-Turquoise-Dark')
subdir('StarLabs-Yellow-Light')
subdir('StarLabs-Yellow')
subdir('StarLabs-Yellow-Dark')
subdir('StarLabs-Green-Light')
subdir('StarLabs-Green')
subdir('StarLabs-Green-Dark')
subdir('StarLabs-Purple-Light')
subdir('StarLabs-Purple')
subdir('StarLabs-Purple-Dark')
subdir('StarLabs-Pink-Light')
subdir('StarLabs-Pink')
subdir('StarLabs-Pink-Dark')
subdir('StarLabs-Orange-Light')
subdir('StarLabs-Orange')
subdir('StarLabs-Orange-Dark')
subdir('StarLabs-Red-Light')
subdir('StarLabs-Red')
subdir('StarLabs-Red-Dark')
subdir('StarLabs-OLED-Light')
subdir('StarLabs-OLED')
subdir('StarLabs-OLED-Dark')
subdir('StarLabs-Tribute-Light')
subdir('StarLabs-Tribute')
subdir('StarLabs-Tribute-Dark')
subdir('StarLabs-Sky-Light')
subdir('StarLabs-Sky')
subdir('StarLabs-Sky-Dark')
