icon_dir = join_paths(get_option('prefix'), 'share/icons')
install_subdir('StarLabs',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Circle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Squircle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Green',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Green-Circle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Green-Squircle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

