icon_dir = join_paths(get_option('prefix'), 'share/icons')
install_subdir('StarLabs',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Circle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Squircle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Alternative',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Alternative-Circle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Alternative-Squircle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Navy',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Navy-Circle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Navy-Squircle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Grey',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Grey-Circle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Grey-Squircle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Turquoise',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Turquoise-Circle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Turquoise-Squircle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Yellow',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Yellow-Circle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Yellow-Squircle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Green',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Green-Circle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Green-Squircle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Purple',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Purple-Circle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Purple-Squircle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Pink',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Pink-Circle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Pink-Squircle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Orange',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Orange-Circle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Orange-Squircle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Red',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Red-Circle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-Red-Squircle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-OLED',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-OLED-Circle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

install_subdir('StarLabs-OLED-Squircle',
install_dir: icon_dir,
strip_directory: false,
exclude_files: ['meson.build'],
)

